Added a linnk to the github repository to the index page

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     </head>
     <body style="font: 12px Consolas; background-color: #323232; color: #B2B2B2;">
         <h1 style="text-align: center;">Monster Hunter: Optimal Set Explorer and Finder</h1>
+        <h3 style="text-align: center;"><a target="_blank" href="https://github.com/Delca/MHOSEF">Fork me on GitHub !</a></h3>
         <div style="display: flex; flex-direction: row;">
             <div style="display: flex;">
                 <div>
