Added an autosolve option

--- a/index.html
+++ b/index.html
@@ -55,10 +55,16 @@
         <div style="display: flex; flex-direction: row;">
             <div style="display: flex;">
                 <div>
-                    <div styler="display: block;">
-                        <button id="search-button-element">Search</button>
-                        <button id="clear-all-button-element">Clear all</button>
-                        <span id="problem-state-element"></span>
+                    <div>
+                        <div styler="display: block;">
+                            <button id="search-button-element">Search</button>
+                            <button id="clear-all-button-element">Clear all</button>
+                            <span id="problem-state-element"></span>
+                        </div>
+                        <div>
+                            <input id="autosolve-checkbox-element" type="checkbox">
+                            <label for="autosolve-checkbox-element">Autosolve on change</label>
+                        </div>
                     </div>
             
                     <div id="skills-container"></div>
