Added weapon selection to make more slots available

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                             <input id="autosolve-checkbox-element" type="checkbox">
                             <label for="autosolve-checkbox-element">Autosolve on change</label>
                         </div>
+                        <div>
+                            <type-ahead id="weapon-selector-element" type="weapons"></type-ahead>
+                        </div>
                     </div>
             
                     <div id="skills-container"></div>
